Addng gameCategoryType entity.